--- a/index.html
+++ b/index.html
@@ -84,17 +84,20 @@
     <!-- Logo -->
     <div class="logo">
         <h1>
-            <span style="color: #4285F4;">G</span>
-            <span style="color: #EA4335;">o</span>
-            <span style="color: #FBBC05;">o</span>
-            <span style="color: #4285F4;">g</span>
-            <span style="color: #34A853;">l</span>
+            <span style="color: #4285F4;">P</span>
+            <span style="color: #EA4335;">e</span>
+            <span style="color: #FBBC05;">t</span>
+            <span style="color: #4285F4;">s</span>
+            <span style="color: #34A853;">@</span>
+            <span style="color: #EA4335;">H</span>
+            <span style="color: #34A853;">o</span>
+             <span style="color: #FBBC05;">m</span>
             <span style="color: #EA4335;">e</span>
         </h1>
     </div>
 
     <!-- Search Box -->
-    <input type="text" class="search-box" placeholder="Search Google or type a URL" />
+    <input type="text" class="search-box" placeholder="Search Pets@Home Product" />
 
     <!-- Buttons -->
     <div class="buttons">
