--- a/index.html
+++ b/index.html
@@ -84,20 +84,17 @@
     <!-- Logo -->
     <div class="logo">
         <h1>
-            <span style="color: #4285F4;">P</span>
-            <span style="color: #EA4335;">e</span>
-            <span style="color: #FBBC05;">t</span>
-            <span style="color: #4285F4;">s</span>
-            <span style="color: #34A853;">@</span>
-            <span style="color: #EA4335;">H</span>
-            <span style="color: #34A853;">o</span>
-             <span style="color: #FBBC05;">m</span>
+            <span style="color: #4285F4;">G</span>
+            <span style="color: #EA4335;">o</span>
+            <span style="color: #FBBC05;">o</span>
+            <span style="color: #4285F4;">g</span>
+            <span style="color: #34A853;">l</span>
             <span style="color: #EA4335;">e</span>
         </h1>
     </div>
 
     <!-- Search Box -->
-    <input type="text" class="search-box" placeholder="Search Pets@Home Product" />
+    <input type="text" class="search-box" placeholder="Search Google or type a URL" />
 
     <!-- Buttons -->
     <div class="buttons">
@@ -120,5 +117,25 @@
             </div>
         </div>
     </footer>
+<script type='text/javascript'>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+			embeddedservice_bootstrap.init(
+				'00D3M0000000bcP',
+				'AnuragGitHubMessingChannel',
+				'https://petsathome00001--preprod.sandbox.my.site.com/ESWAnuragGitHubMessingCha1767956038934',
+				{
+					scrt2URL: 'https://petsathome00001--preprod.sandbox.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://petsathome00001--preprod.sandbox.my.site.com/ESWAnuragGitHubMessingCha1767956038934/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 </body>
 </html>
