--- a/index.html
+++ b/index.html
@@ -77,19 +77,22 @@
 <body>
     <!-- Header Links -->
     <div class="header-links">
+        <a href="#">My Account</a>
         <a href="#">My Orders</a>
-        <a href="#">Images</a>
     </div>
 
     <!-- Logo -->
     <div class="logo">
         <h1>
-            <span style="color: #4285F4;">G</span>
-            <span style="color: #EA4335;">o</span>
-            <span style="color: #FBBC05;">o</span>
-            <span style="color: #4285F4;">g</span>
-            <span style="color: #34A853;">l</span>
+            <span style="color: #4285F4;">P</span>
             <span style="color: #EA4335;">e</span>
+            <span style="color: #FBBC05;">t</span>
+            <span style="color: #4285F4;">s</span>
+            <span style="color: #34A853;">@</span>
+            <span style="color: #EA4335;">H</span>
+            <span style="color: #4285F4;">o</span>
+            <span style="color: #EA4335;">m</span>
+            <span style="color: #4285F4;">e</span>
         </h1>
     </div>
 
