--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets @ Home</title>
+    <title>Pets@Home</title>
     <style>
         body {
             margin: 0;
@@ -97,7 +97,7 @@
     </div>
 
     <!-- Search Box -->
-    <input type="text" class="search-box" placeholder="Search Google or type a URL" />
+    <input type="text" class="search-box" placeholder="Search for food, treats, toys & more..." />
 
     <!-- Buttons -->
     <div class="buttons">
