--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         .buttons button {
             padding: 10px 20px;
             margin: 5px;
-            border: none;
-            background-color: #f8f9fa;
+            border: 1px;
+            background-color: #cad2da;
             border-radius: 4px;
             font-size: 14px;
             cursor: pointer;
